--- a/tests/kmodel.html
+++ b/tests/kmodel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Karma Model</title>
-	<script src="../node_modules/plotter/plotter.dev.js"></script>
+	<script src="../plotter.dev.js"></script>
 	<script>
 
 		/**************************************************
@@ -35,6 +35,38 @@
 
 		var displayV = true;
 		var displayVm = true;
+
+
+		var Karma = new PointObject();
+		Karma.voltage = 0.0;
+		Karma.vgate = 0.0;
+
+		Karma.calculate = function(p) {
+
+			// if the time is either s1 or s2, change the value of Vm to 1.5
+		    if (p == s1 || p == s2) { 
+		    	this.voltage = 1.5;
+		    }
+
+	        // calculate heaviside of 
+	        previousHeaviside = heaviside(this.voltage - 1);
+
+		    // Partial derivative of Vm (equation 1)
+		    var gamma = 1.92;
+		    var delta = 0.23;
+		    var alpha = 7.5;
+		    var h = Math.pow(this.voltage, 2) * (1 - (delta * this.voltage));
+		    var diffVoltage = (-this.voltage + (gamma - Math.pow((this.vgate / vstar), xm)) * h);
+		    this.voltage += 5 * timestep * diffVoltage / alpha; // don't know why this works
+
+		    var diffVGate = eps * (previousHeaviside - this.vgate);
+		    this.vgate += timestep * diffVGate;
+
+		    //debug.push({ "time":p, "Vm":voltage, "V":vgate});
+		    
+		    return { "x":p, "voltage": this.voltage, "vgate": this.vgate };
+
+		}
 
 		/**************************************************
 		 PAGE FUNCTIONS	
@@ -69,13 +101,20 @@
 
 			document.getElementById("displayVm").onclick = resetGraph;
 			document.getElementById("displayV").onclick = resetGraph;
+			document.getElementById("getData").onclick = printData;
+		}
+
+		/**
+		 * print the data from plotter.
+		 */
+		function printData() {
+			app.getPlotData(Karma);
 		}
 
 		/**
 		 * Reset the graph with the given form values
 		 */
 		function resetGraph() {
-			debug = [];
 			vstar = numericValue(document.getElementsByName("vstar")[0].value);
 			xm = numericValue(document.getElementsByName("xm")[0].value);
 			ueps = numericValue(document.getElementsByName("ueps")[0].value);
@@ -86,6 +125,10 @@
 
 			displayVm = document.getElementsByName("displayVm")[0].checked;
 			displayV = document.getElementsByName("displayV")[0].checked;
+
+			Karma.voltage = 0.0;
+			Karma.vgate = 0.0;
+			Karma.points = [];
 
 			update();
 		}
@@ -136,10 +179,8 @@
 		/**
 		 * Update the graph and redraw all of the plots
 		 */
-		var count = 0;
+		//var count = 0;
 		function update() {
-			console.log(count);
-			count++;
 
 			refitPlot();
 
@@ -147,38 +188,81 @@
 
 			app.selectPlot("Karma");
 
+			//var Karma = new PointObject();
+			// Karma.voltage = 0.0;
+			// Karma.vgate = 0.0;
 
-			// display vgate
-			if (displayV) {
-				voltage = 0.0;
-				vgate = 0.0;
-				app.plotFunction(calculateVGate, true, timestep);
-			}
+			// Karma.calculate = function(p) {
 
-			// display voltage
-			if (displayVm) {
-				voltage = 0.0;
-				vgate = 0.0;
-				app.plotFunction(calculateVoltage, true, timestep);
-			}
+			// 	// if the time is either s1 or s2, change the value of Vm to 1.5
+			//     if (p == s1 || p == s2) { 
+			//     	this.voltage = 1.5;
+			//     }
 
-			// display s1
-			var p1 = new Point(s1, 0),
-				p2 = new Point(s1, voltageHeight);
-			app.ctx.strokeStyle = "#000000";
-			app.plotLine(p1, p2);
+		 //        // calculate heaviside of 
+		 //        previousHeaviside = heaviside(this.voltage - 1);
 
-			var p = new Point(s1 + 15, 1.5);
-			app.plotText("S1", p);
+			//     // Partial derivative of Vm (equation 1)
+			//     var gamma = 1.92;
+			//     var delta = 0.23;
+			//     var alpha = 7.5;
+			//     var h = Math.pow(this.voltage, 2) * (1 - (delta * this.voltage));
+			//     var diffVoltage = (-this.voltage + (gamma - Math.pow((this.vgate / vstar), xm)) * h);
+			//     this.voltage += 5 * timestep * diffVoltage / alpha; // don't know why this works
+
+			//     var diffVGate = eps * (previousHeaviside - this.vgate);
+			//     this.vgate += timestep * diffVGate;
+
+			//     //debug.push({ "time":p, "Vm":voltage, "V":vgate});
+			    
+			//     return { "x":p, "voltage": this.voltage, "vgate": this.vgate };
+
+			// }
+
+			Karma.generate(0, time, timestep);
+			app.plot(Karma, "vgate", {
+				connected: true,
+				radius: 0,
+				strokeStyle: "green"
+			});
+
+			app.plot(Karma, "voltage", {
+				connected: true,
+				r: 0,
+				strokeStyle: "red"
+			});
+
+			// // display vgate
+			// if (displayV) {
+			// 	voltage = 0.0;
+			// 	vgate = 0.0;
+			// 	app.plotFunction(calculateVGate, true, timestep);
+			// }
+
+			// // display voltage
+			// if (displayVm) {
+			// 	voltage = 0.0;
+			// 	vgate = 0.0;
+			// 	app.plotFunction(calculateVoltage, true, timestep);
+			// }
+
+			// // display s1
+			// var p1 = new Point(s1, 0),
+			// 	p2 = new Point(s1, voltageHeight);
+			// app.ctx.strokeStyle = "#000000";
+			// app.plotLine(p1, p2);
+
+			// var p = new Point(s1 + 15, 1.5);
+			// app.plotText("S1", p);
 
 			
-			// display s2
-			var p1 = new Point(s2, 0),
-				p2 = new Point(s2, voltageHeight);
-			app.ctx.strokeStyle = "#000000";
-			app.plotLine(p1, p2);
+			// // display s2
+			// var p1 = new Point(s2, 0),
+			// 	p2 = new Point(s2, voltageHeight);
+			// app.ctx.strokeStyle = "#000000";
+			// app.plotLine(p1, p2);
 
-			var p = new Point(s2 + 15, 1.5);
+			// var p = new Point(s2 + 15, 1.5);
 			app.plotText("S2", p);
 
 			//window.requestAnimationFrame(update);		
@@ -289,65 +373,69 @@
 
 
 	</script>
-	<style>
-		#controls {
-			font-family:helvetica;
-		}
-
-		#controls label {
-			display: block;
-			font-weight: bold;
-		}
-
-		#controls button {
-			border: none;
-			outline: none;
-			background-color: #448FCE;
-			color: white;
-		}
+	<link href="../plotter.css" type="text/css" rel="stylesheet" />
 	</style>
 </head>
 <body>
 	<div id="app">
 		<canvas id="plot">hello</canvas>
 	</div>
-	<div id="controls" style="border:1px solid black">
+	<div id="controls" class="plotter_form">
 
-		<div>
+		<!-- Formulas -->
+<!-- 		<fieldset>
+			<legend>Formulas</legend>
 			<span><strong>Vm:</strong> -Vm + [gamma - (v/v*)<sup>xm</sup>] * h(Vm)</span><br />
 			<span><strong>h(Vm)</strong>: [Vm<sup>2</sup> - (delta * Vm<sup>3</sup>)]/alpha</span><br />
 			<span><strong>V:</strong> epsilon(Theta(Vm - 1) - v)</span><br />
-		</div>
-		<hr />
+		</fieldset> -->
 
-		<label style="color:green;" for="displayV">Display V</label>
-		<input id="displayV" name="displayV" type="checkbox" checked/>
+		<!-- inputs -->
+		<fieldset>
+			<div class="plotter_inputgroup plotter_inputgroup-green">
+				<input id="displayV" name="displayV" type="checkbox" checked/>
+				<label for="displayV">Display V</label>
+			</div>
+			<div class="plotter_inputgroup plotter_inputgroup-red">
+				<input id="displayVm" name="displayVm" type="checkbox" checked/>
+				<label for="displayVm">Display Vm</label>
+			</div>
+		</fieldset>
+		<fieldset>
+			<div class="plotter_inputgroup">
+				<label for="vstar">VStar</label>
+				<input type="text" name="vstar" value="0.64" />
+			</div>
+			<div class="plotter_inputgroup">
+				<label for="xm">xm</label>
+				<input type="text" name="xm" value="10.0" />
+			</div>
+			<div class="plotter_inputgroup">
+				<label for="ueps">1/eps</label>
+				<input type="text" name="ueps" value="250" />
+			</div>
+			<div class="plotter_inputgroup">
+				<label for="s1">S1</label>
+				<input type="text" name="s1" value="0.0"/>
+			</div>
+			<div class="plotter_inputgroup">
+				<label for="s2">S2</label>
+				<input type="text" name="s2" value="300.0" />
+			</div>
+			<div class="plotter_inputgroup">
+				<label for="time">time</label>
+				<input type="text" name="time" value="500.0" />
+			</div>
+		</fieldset>
 
-		<label style="color:red;" for="displayVm">Display Vm</label>
-		<input id="displayVm" name="displayVm" type="checkbox" checked/>
-
-		<label for="vstar">VStar</label>
-		<input type="text" name="vstar" value="0.64" />
-
-		<label for="xm">xm</label>
-		<input type="text" name="xm" value="10.0" />
-
-		<label for="ueps">1/eps</label>
-		<input type="text" name="ueps" value="250" />
-
-		<label for="s1">S1</label>
-		<input type="text" name="s1" value="0.0"/>
-
-		<label for="s2">S2</label>
-		<input type="text" name="s2" value="300.0" />
-
-		<label for="time">time</label>
-		<input type="text" name="time" value="500.0" />
-
-		<button id="reset">Reset</button>
-		<button id="default">Defaults</button>
-
-		<a href="data:application/csv;charset=utf-8,1,2,3" target"_blank">download csv</a>
+		<!-- Buttons -->
+		<fieldset>
+			<div class="plotter_inputgroup">
+				<button id="reset">Reset</button>
+				<button id="default">Defaults</button>
+				<button id="getData">Print Data</button>
+			</div>
+		</fieldset>
 	</div>
 </body>
 </html>
