Print specific fields
The printPlotData function now allows the user to specify fields to return.

--- a/tests/kmodel.html
+++ b/tests/kmodel.html
@@ -108,7 +108,7 @@
 		 * print the data from plotter.
 		 */
 		function printData() {
-			var csv = app.getPlotData(Karma);
+			var csv = app.printPlotData(Karma);
 			//window.open("data:text/csv;charset=utf-8," + encodeURIComponent(csv));
 		}
 
