Normalize with Point Object
Replaced the two separate values, "normalizeMax" and "normalizeMin", with a single value "normalize" that takes a Point as a value. The user specifies the min value with Point.x and the max value with Point.y

--- a/tests/kmodel.html
+++ b/tests/kmodel.html
@@ -212,16 +212,14 @@
 				connected: true,
 				radius: 0,
 				strokeStyle: "green", 
-				normalizeMax: .75,
-				normalizeMin: 0
+				normalize: new Point(0, .75)
 			});
 
 			app.plot(Karma, "voltage", {
 				connected: true,
 				r: 0,
 				strokeStyle: "red",
-				normalizeMax: 4,
-				normalizeMin: 0
+				normalize: new Point(0, 4)
 			});
 
 			// // display vgate
