--- a/tests/kmodel.html
+++ b/tests/kmodel.html
@@ -421,7 +421,7 @@
 		<!-- Buttons -->
 		<fieldset>
 			<div class="plotter_inputgroup">
-				<button id="reset">Reset</button>
+				<button type="submit" id="reset">Reset</button>
 				<button id="default">Defaults</button>
 				<button id="getData">Print Data</button>
 			</div>
